# node-resolve-dep

./: BUILD.bazel  README.md  WORKSPACE  javascript.js  package.json  test_js.spec.js  test_ts.spec.js  typescript.ts
