package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary", "jasmine_node_test")

filegroup(
    name = "node_modules",
    srcs = glob(["node_modules/**/*"],
        exclude = [
            "node_modules/**/test/**",
            "node_modules/**/docs/**",
            "node_modules/**/.*/**"
        ],
    ) + glob(["node_modules/.bin/*"]),
)

nodejs_binary(
  name = "run_js",
  entry_point = "node_resolve_dep/javascript.js",
  data = ["javascript.js"],
)

jasmine_node_test(
  name = "test_js",
  srcs = ["test_js.spec.js"],
  data = ["javascript.js"],
)
